--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 !.travis.yml
 *.iml
 temp
+!*pom.xml
+!pom.xml
 
 
 # Created by https://www.gitignore.io/api/git,lua,java,linux,macos,maven,gradle,windows,eclipse,netbeans,intellij,tortoisegit
