--- a/.gitignore
+++ b/.gitignore
@@ -287,10 +287,10 @@ Temporary Items
 
 ### Maven ###
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
+#pom.xml.tag
+#pom.xml.releaseBackup
+#pom.xml.versionsBackup
+#pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
