--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,13 @@
 
     <groupId>com.jukusoft</groupId>
     <artifactId>mmo-engine-client</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<modules>
+		<module>application-layer</module>
+	</modules>
 
-    <name>MMO Game Engine - Client</name>
+	<name>MMO Game Engine - Client</name>
     <description>Another try to build a mmo game client.</description>
     <url>https://github.com/JuKu/mmo-engine-client</url>
 
@@ -187,6 +191,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
     
 </project>
