--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<modules>
 		<module>application-layer</module>
+		<module>game-logic-layer</module>
+		<module>mmo-engine-client-game-view-layer</module>
+		<module>game-view-layer</module>
+		<module>desktop</module>
+		<module>desktop</module>
 	</modules>
 
 	<name>MMO Game Engine - Client</name>
