--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -11,5 +11,29 @@
 
 	<artifactId>mmo-engine-client-desktop</artifactId>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<skipTests>${skip.tests}</skipTests>
+							<argLine>${argLine} -Duser.timezone=UTC -Xms256m -Xmx256m</argLine>
+							<includes>
+								<includes>**/*Test*</includes>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
