--- a/game-view-layer/pom.xml
+++ b/game-view-layer/pom.xml
@@ -11,5 +11,38 @@
 
 	<artifactId>mmo-engine-client-game-view-layer</artifactId>
 
+	<dependencies>
+		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
+		<dependency>
+			<groupId>com.carrotsearch</groupId>
+			<artifactId>hppc</artifactId>
+			<version>${hppc.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<skipTests>${skip.tests}</skipTests>
+							<argLine>${argLine} -Duser.timezone=UTC -Xms256m -Xmx256m</argLine>
+							<includes>
+								<includes>**/*Test*</includes>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
