--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ temp
 !*pom.xml
 !pom.xml
 
+*.pentaquin
+.pentaquin
+
+!data
+!*data
+
 
 # Created by https://www.gitignore.io/api/git,lua,java,linux,macos,maven,gradle,windows,eclipse,netbeans,intellij,tortoisegit
 
