added some classes for logging.

--- a/config/logger.cfg
+++ b/config/logger.cfg
@@ -1,2 +1,7 @@
 [Logger]
 enabled=true
+printToConsole=true
+level=VERBOSE
+timeFormat=dd-MM-yyyy HH:mm:SS
+writeToFile=true
+file=temp/logs/log.txt
