--- a/config/logger.cfg
+++ b/config/logger.cfg
@@ -4,4 +4,4 @@ printToConsole=true
 level=VERBOSE
 timeFormat=dd-MM-yyyy HH:mm:SS
 writeToFile=true
-file=temp/logs/log.txt
+file=temp/logs/latest-log.txt
