added support to create temp directory, if directory doesn't exists.

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,6 +1,8 @@
 [Paths]
-dataDir=./data2/
-configDir=init/
+dataDir=./data/
+configDir=./data/init/
+tempDir=./temp/
 
 [Error]
 windowTitle=Pentaquin MMO - Error
+header=
