added support to load config directories.

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,8 +1,8 @@
 [Paths]
 dataDir=./data/
-configDir=./data/init/
+configDir={data.dir}/config/;{data.dir}/init/
 tempDir=./temp/
 
 [Error]
 windowTitle=Pentaquin MMO - Error
-header=
+headerText=Please report this exception to the game developers and save log file ./temp/logs/latest-log.txt first!
