changed game.cfg .

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,6 +1,6 @@
 [Paths]
 dataDir=./data/
-configDir={data.dir}/config/;{data.dir}/init/
+configDir={data.dir}config/;{data.dir}init/
 tempDir=./temp/
 
 [Error]
