added splashscreen while engine is initializing.

--- a/data/init/splashscreen.ini
+++ b/data/init/splashscreen.ini
@@ -1,6 +1,12 @@
 [Splashscreen]
 bgImage={data.dir}init/splashscreen/splashscreen_bg.png
 logoImage={data.dir}init/splashscreen/game_engine_logo.png
+animationImage={data.dir}init/splashscreen/animation.png
+animX=788
+animY=275
+animWidth=130
+animHeight=130
+animSpeed=20
 
 width=1280
 height=720
