changed splashscreen, added offsets for logo.

--- a/data/init/splashscreen.ini
+++ b/data/init/splashscreen.ini
@@ -2,6 +2,10 @@
 bgImage={data.dir}init/splashscreen/splashscreen_bg.png
 logoImage={data.dir}init/splashscreen/game_engine_logo.png
 animationImage={data.dir}init/splashscreen/animation.png
+
+logoOffsetX=0
+logoOffsetY=50
+
 animX=788
 animY=275
 animWidth=130
