--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,9 @@
 		<!-- ini4j parser -->
 		<ini4j.version>0.5.4</ini4j.version>
 
+		<!-- jhardware to get hardware information -->
+		<jhardware.version>0.8.5</jhardware.version>
+
 		<!-- format maven build timestamp to add to manifest -->
 		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
