added support to check required OpenGL extensions.

--- a/data/init/requirements.ini
+++ b/data/init/requirements.ini
@@ -5,5 +5,7 @@ freeHardDriveSpace=4096
 ;mimimum number of required cores
 minCores=2
 
+; required minimum OpenGL version
 openGLMajor=2
 openGLMinor=0
+openGLExtensions=GL_ARB_framebuffer_object;GL_EXT_framebuffer_object;GL_EXT_framebuffer_blit
