fixed some problems in junit tests.

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,7 +1,7 @@
 [Paths]
 dataDir=./data/
-configDir={data.dir}config/;{data.dir}init/
-tempDir=./temp/
+configDir={user.home}config/;{data.dir}init/;{user.home}.pentaquin/config/
+tempDir={java.io.tmpdir}/.pentaquin/temp/
 
 [Error]
 windowTitle=Pentaquin MMO - Error
