fixed some problems.

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,6 +1,6 @@
 [Paths]
 dataDir=./data/
-configDir={user.home}config/;{data.dir}init/;{user.home}.pentaquin/config/
+configDir={user.home}config/;{data.dir}init/;{data.dir}config/;{user.home}.pentaquin/config/
 tempDir={java.io.tmpdir}/.pentaquin/temp/
 
 [Error]
