--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,8 @@
 		<!-- ini4j parser -->
 		<ini4j.version>0.5.4</ini4j.version>
 
+		<org.json.version>20180813</org.json.version>
+
 		<!-- jhardware to get hardware information -->
 		<jhardware.version>0.8.5</jhardware.version>
 
