changed travis ci, added support for telegram bot.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,5 @@ script:
 #  - mvn cobertura:cobertura
 
 notifications:
-email: false
+  email: false
+  webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
