--- a/game-logic-layer/pom.xml
+++ b/game-logic-layer/pom.xml
@@ -12,6 +12,13 @@
 	<artifactId>mmo-engine-client-game-logic-layer</artifactId>
 
 	<dependencies>
+		<!-- application (hardware & os) layer -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>mmo-engine-client-application-layer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
 		<dependency>
 			<groupId>com.carrotsearch</groupId>
