--- a/main/pom.xml
+++ b/main/pom.xml
@@ -19,6 +19,20 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<!-- game-logic-layer -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>mmo-engine-client-game-logic-layer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<!-- game-view-layer -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>mmo-engine-client-game-view-layer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
 		<dependency>
 			<groupId>com.carrotsearch</groupId>
