--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,9 @@
 		<!-- GNU gettext internationalization -->
 		<i18n.gettext.version>1.1.0</i18n.gettext.version>
 
+		<!-- lua rembulan version -->
+		<lua.rembulan.version>1.0.0</lua.rembulan.version>
+
 		<!-- don't deploy all modules to maven central, only shared-commons-library -->
 		<maven.deploy.skip>true</maven.deploy.skip>
 
