--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
     #jukusoft, juku-github
 
 script:
-  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -U
 #  - mvn clean verify
 #  - mvn clean install
   - mvn -e clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.login=${SONAR_TOKEN}
