--- a/application-layer/pom.xml
+++ b/application-layer/pom.xml
@@ -98,6 +98,14 @@
 			<artifactId>rembulan-stdlib</artifactId>
 			<version>${lua.rembulan.version}</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
+		<dependency>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+			<version>${js.rhino.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
