--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,14 @@ script:
 
 notifications:
   email: false
-  webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
+  webhooks:
+    urls:
+    # Telegram Bot (https://github.com/kvld/travisci-telegram)
+    - "https://fathomless-fjord-24024.herokuapp.com/notify"
+    on_success: always  # always|never|change
+    on_failure: always
+    on_start: never
+
+#notifications:
+#  email: false
+#  webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
