added class Pools for object pooling to avoid memory allocation.

--- a/shared-library/pom.xml
+++ b/shared-library/pom.xml
@@ -16,6 +16,22 @@
 		<maven.deploy.skip>false</maven.deploy.skip>
 	</properties>
 
+	<dependencies>
+		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
+		<dependency>
+			<groupId>com.carrotsearch</groupId>
+			<artifactId>hppc</artifactId>
+			<version>${hppc.version}</version>
+		</dependency>
+
+		<!-- https://github.com/mini2Dx/gdx-collections -->
+		<dependency>
+			<groupId>org.mini2Dx</groupId>
+			<artifactId>gdx-collections</artifactId>
+			<version>${gdx.collections.version}</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
