added input mapping, closed #7 .

--- a/data/input/keyboard.cfg
+++ b/data/input/keyboard.cfg
@@ -1,27 +1,27 @@
 [KeyboardMapping]
 ; WASC movement control
-W=
-A=
-S=
-D=
+W=MOVE_TOP
+A=MOVE_LEFT
+S=MOVE_DOWN
+D=MOVE_RIGHT
 
 ; arraw keys
-UP=
-DOWN=
-LEFT=
-RIGHT=
+UP=MOVE_TOP
+DOWN=MOVE_DOWN
+LEFT=MOVE_LEFT
+RIGHT=MOVE_RIGHT
 
 ; arraw keys
-DPAD_UP=
-DPAD_DOWN=
-DPAD_LEFT=
-DPAD_RIGHT=
+DPAD_UP=MOVE_TOP
+DPAD_DOWN=MOVE_DOWN
+DPAD_LEFT=MOVE_LEFT
+DPAD_RIGHT=MOVE_RIGHT
 
 ; numpad arraw keys
-NUMPAD_8=
-NUMPAD_2=
-NUMPAD_4=
-NUMPAD_6=
+NUMPAD_8=MOVE_TOP
+NUMPAD_2=MOVE_DOWN
+NUMPAD_4=MOVE_LEFT
+NUMPAD_6=MOVE_RIGHT
 
 ; take screenshot with CTRL + C
 C=TAKE_SCREENSHOT
