added support to load controller mappings.

--- a/data/config/controller.cfg
+++ b/data/config/controller.cfg
@@ -1,3 +1,11 @@
 [Controller]
 enabled=true
 autoGenerateMapping=true
+
+; options for left stick
+invertLStickVerticalAxis=false
+invertLStickHorizontalAxis=false
+
+; options for right stick
+invertRStickVerticalAxis=false
+invertRStickHorizontalAxis=false
