fixed some problems in class SelectServerScreen.

--- a/data/init/graphics.ini
+++ b/data/init/graphics.ini
@@ -2,6 +2,6 @@
 background=data/misc/wallpaper/1280x720.png
 logo=data/misc/wallpaper/600x235.png
 
-[UI.Skin]
+[UISkin]
 atlas=data/misc/skins/default/uiskin.atlas
 json=data/misc/skins/default/uiskin.json
