--- a/data/init/graphics.ini
+++ b/data/init/graphics.ini
@@ -1,7 +1,7 @@
 [SelectServer]
-background=data/misc/wallpaper/1280x720.png
-logo=data/misc/wallpaper/600x235.png
+background={data.dir}misc/wallpaper/1280x720.png
+logo={data.dir}misc/wallpaper/600x235.png
 
 [UISkin]
-atlas=data/misc/skins/default/uiskin.atlas
-json=data/misc/skins/default/uiskin.json
+atlas={data.dir}misc/skins/default/uiskin.atlas
+json={data.dir}misc/skins/default/uiskin.json
