added new maven module for command line interface.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>main</module>
 		<module>desktop</module>
 		<module>shared-library</module>
+		<module>cli</module>
 	</modules>
 
 	<name>MMO Game Engine - Client</name>
