--- a/main/pom.xml
+++ b/main/pom.xml
@@ -33,6 +33,13 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<!-- CLI -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>mmo-engine-client-cli</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
 		<dependency>
 			<groupId>com.carrotsearch</groupId>
