fixed some problems in maven configuration.

--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -25,5 +25,26 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.jukusoft</groupId>
+				<artifactId>gettext-maven-plugin</artifactId>
+				<version>${i18n.gettext.version}</version>
+				<configuration>
+					<!-- skip this plugin in this module -->
+					<skip>true</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>generatepot</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
